--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "MERN Project to study this stack.",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/CabralArthur/MERN-Project/issues"
   },
-  "homepage": "https://github.com/CabralArthur/MERN-Project#readme"
+  "homepage": "https://github.com/CabralArthur/MERN-Project#readme",
+  "dependencies": {
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
+  }
 }
